# iflytek_ckb_tool

./: .env  API_CALL_EXAMPLES.md  Dockerfile  Dockerfile.backup  README.md  README_DOCKER.md  README_UV.md  app.py  app.toml  batch_config.yaml  docker-compose.yml  docker-run.sh  log_parser2.py  main.py  pyproject.toml  requirements.txt
batch_processing_tool/: __init__.py  ckb.py  config.py  excel_io.py  login.py  main.py
conf/: __init__.py  constants.py  error_codes.py  logging.py  path_utils.py  settings.py
core/: check_by_rule.py  ckb_qa_task.py
data/: scene_config.xlsx  test_examples.xlsx  test_examples_integrated_result_task-12345.xlsx  test_examples_integrated_result_task-12345_质量分析报告_task-12345.md  test_examples_metrics_task-12345.json  test_examples_output.jsonl  test_examples_output.xlsx  test_examples_output_analysis_result.xlsx  test_examples_output_analysis_result_metrics.json  test_examples_output_analysis_result_质量分析报告.md  ~$test_examples_output_analysis_result.xlsx
data_analysis_tool/: __init__.py  analysis_executors.py  analyzers.py  excel_handler.py  main.py  parsers.py  prompts.py  scene_config.py
data_analysis_tools/: __init__.py  analysis_executors.py  analyzers.py  config.py  example.py  excel_handler.py  json_to_excel.py  main.py  models.py  parsers.py  prompts.py  scene_config.py
excel_io/: ckb_task.py  read_file.py  write_result.py
lib/: ckb.py  login.py
llm/: deepseek_api.py  deepseek_client copy.py  deepseek_client.py  spark_client.py  spark_intranet.py  spark_u4.0ultra_http.py  spark_u4.0ultra_websocket.py  spark_x1.5_websocket.py
llm/spark/: generate_url.py  spark_client.py
metrics_analysis_tool/: __init__.py  main.py  prompts.py  report_generator.py
python-base/: Dockerfile.app.example  Dockerfile.base  README_BASE_IMAGE.md  docker-entrypoint.sh  requirements.base.txt
spark_api_tool/: __init__.py  ckb.py  ckb_client.py  config.py  excel_handler.py  excel_io.py  login.py  login_manager.py  main.py
utils/: __init__.py  log_parser.py
