[project]
name = "ckb-qa-tool-v0-1-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "cryptography>=45.0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "toml>=0.10.2",
    "pyyaml>=6.0.0",
    "websockets>=15.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
